[tool.poetry]
name = "chaoticsystems"
version = "0.1.0"
description = ""
authors = ["Cole Fleming <cmfleming@eths202.org>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11.3"
scipy = "^1.8.0"
numpy = "^1.22.3"
matplotlib = "^3.5.1"
tqdm = "^4.63.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
